After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 740727 - *source: new lines in xml break my parser.
*source: new lines in xml break my parser.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-editing-services
unspecified
Other All
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-11-26 04:30 UTC by Mathieu Duponchelle
Modified: 2015-06-24 14:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
*source: new lines in xml break my parser. (6.07 KB, patch)
2014-11-26 04:30 UTC, Mathieu Duponchelle
committed Details | Review

Description Mathieu Duponchelle 2014-11-26 04:30:47 UTC
+ So I removed them cause I'm clever
Comment 1 Mathieu Duponchelle 2014-11-26 04:30:49 UTC
Created attachment 291516 [details] [review]
*source: new lines in xml break my parser.
Comment 2 Mathieu Duponchelle 2014-12-05 21:13:16 UTC
Review of attachment 291516 [details] [review]:

commited
Comment 3 Mathieu Duponchelle 2014-12-05 21:21:01 UTC
commit fb34c5056e10345744be7eea1755b4f7923add72
Author: Mathieu Duponchelle <mathieu.duponchelle@opencreed.com>
Date:   Wed Nov 26 01:08:31 2014 +0100

    *source: new lines in xml break my parser.
    
    + So I removed them cause I'm clever
    
    https://bugzilla.gnome.org/show_bug.cgi?id=740727