*source: new lines in xml break my parser.

+ So I removed them cause I'm clever

https://bugzilla.gnome.org/show_bug.cgi?id=740727