ges/ges-audio-source.c
@@ -32,19 +32,16 @@
  * <colspec colname="properties_name" colwidth="200px"/>
  * <colspec colname="properties_flags" colwidth="400px"/>
  * <tbody>
- *
  * <row>
  *  <entry role="property_type"><link linkend="gdouble"><type>double</type></link></entry>
  *  <entry role="property_name"><link linkend="GESAudioSource--volume">volume</link></entry>
  *  <entry>volume factor, 1.0=100%.</entry>
  * </row>
- *
  * <row>
  *  <entry role="property_type"><link linkend="gboolean"><type>gboolean</type></link></entry>
  *  <entry role="property_name"><link linkend="GESAudioSource--mute">mute</link></entry>
  *  <entry>mute channel.</entry>
  * </row>
- *
  * </tbody>
  * </tgroup>
  * </informaltable>
